--- a/index.html
+++ b/index.html
@@ -5,7 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./src/index.css" />
     <script src="./src/index.js"></script>
   </head>
-  <body></body>
+  <body>
+    <ul class="timeline">
+      <li></li>
+      <li class="executed"></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </body>
 </html>
