timeline and timespan

--- a/index.html
+++ b/index.html
@@ -9,17 +9,6 @@
     <script src="./src/index.js"></script>
   </head>
   <body>
-    <ul class="timeline">
-      <li></li>
-      <li class="executed"></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
+    <ul id="timeline" class="timeline"></ul>
   </body>
 </html>
